
	Peter Pentchev (roamer)
	- Various sanity checks and minor optimizations [1573292]
	- Fix child handling - waitpid and sys/wait.h [1573288]
	- Dynamicallly allocate sortdata[] in vpopmail.c [1573287]
	- Include ctype.h in the PostgreSQL backend [1573284]
	- Set SHELL in vdelivermail before executing external programs [1573280]
	- Some more error checking in vchangepw [1573277]

5.4.17 - released 12-Jul-06

	Rick Widmer
	- vpopmaild: remove debug output from find_domain function.
	- vpopmail: fix segfault in users/assign sorting code caused by 
	  entries that don't contain a dot (.). [1514733]

	Jeremy Kister
	- vdelivermail: pass qmail-inject's error code instead of always
	  deferring. [1484105]

	Ron Gage
	- vmysql: reconnect to server if connection timed out.

	Rolf Eike Beer
	- vchangepw: add error checking and other code improvements.
	  [1371572]
	- change API for vgetpasswd() to make more sense. [1371566]
	- Update del_control() to properly handle remove_lines() return
	  value. [1514613]
	- vpopmail: minor improvements to remove_lines(). [1371536]

	secnetdk
	- vmysql, vpgsql: remove entries from vlog when deleting a domain
	  or a user. [1099800, 995762]

	Michael Krieger
	- vcdb, vpopmail: pass mode to open() when creating files.  Fixes
	  bug where lock files were created with 0000 permissions. [1499043]
	- vpalias: set mydir to NULL after closing it. [1499045]

	Tom Collins
	- vpalias: don't trash alias name passed to valias_insert().
	  [1491087]
	- vpopmaild: don't show last auth if auth-logging disabled.
	  [1511313]
	- Only include err.h if it's present. [1484110]
	- vpgsql: convert domain name to lower case when creating table
	  name. [1227383]
	- vpopmail: fix minor error in remove_lines() when file locking
	  not defined.

5.4.16 - released 7-May-06

	Michael Krieger
	- vpalias: Properly handle some empty search results.

	Ken Jones
	- vpalias: wasn't allocating enough memory for alias name in